# web_homework

./: .env.example  main.py  pyproject.toml
pages/: catalog.html  categories.html  contacts.html  main.html
src/: server.py
